some changements/updates to webmontag

--- a/index.html
+++ b/index.html
@@ -56,15 +56,17 @@
         </section>
 
         <section>
-          <img src="images/palava-website1.png" />
-        </section>
+          <section>
+            <img src="images/palava-website1.png" />
+          </section>
 
-        <section>
-          <img src="images/palava-website2.png" />
-        </section>
+          <section>
+            <img src="images/palava-website2.png" />
+          </section>
 
-        <section>
-          <img src="images/palava-website3.png" />
+          <section>
+            <img src="images/palava-website3.png" />
+          </section>
         </section>
 
         <section>
@@ -240,12 +242,22 @@
 
           <section>
             <h2>Ideas</h2>
+            <h4>I18n</h4>
+          </section>
+
+          <section>
+            <h2>Ideas</h2>
+            <h4>Error management +<br>Automated browser testing</h4>
+          </section>
+
+          <section>
+            <h2>Ideas</h2>
             <h4>TURN + Ports 80/443</h4>
           </section>
 
           <section>
             <h2>Ideas</h2>
-            <h4>Features: Text chat, Screen sharing</h4>
+            <h4>Features: Text chat, File transfer, Screen sharing</h4>
           </section>
 
           <section>
@@ -257,7 +269,7 @@
             <h2> How can you help?</h2>
             <h4> Coding</h4>
             <h4> Designing</h4>
-            <h4> Money (appeal for funds in january)</h4>
+            <h4> Money (appeal for funds coming soon)</h4>
             <h4> Spreading the word!</h4>
           </section>
         </section>
